--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         }
 
         body {
-            background-image: url("image.jpg");
+            background-image: url();
             background-position: center;
+            background-size: cover;
             
 
             color: white;
